--- a/Ejercicio1/ejercicio1.html
+++ b/Ejercicio1/ejercicio1.html
@@ -6,9 +6,6 @@
     <title>Ejercicio 1</title>
 </head>
 <body>
-    
-    <ul>
-        <li><a href="Ejercicio1/ejercicio1.html">Ejercicio 1</a></li>
-    </ul>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
