--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     
     <ul>
         <li><a href="Ejercicio1/ejercicio1.html">Ejercicio 1</a></li>
+        <li><a href="Ejercicio2/Ejercicio2.html">Ejercicio 2</a></li>
+        <li><a href="Ejercicio3/Ejercicio3.html">Ejercicio 3</a></li>
     </ul>
 </body>
 </html>
